fixed footer styling on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -213,11 +213,11 @@
   }
 
   .footer {
-  padding-top: 110px;
+  padding-top: 140px;
   }
 
   .footer-text {
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   }
 
 }
